k8s/aat/cluster-00/static/k8s.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: env-vars-test
  namespace: admin
spec:
  selector:
    matchLabels:
      app: env-vars-test
  replicas: 1
  template:
    metadata:
      labels:
        app: env-vars-test
    spec:
      containers:
        -   name: env-vars
          image: hmctspublic.azurecr.io/timj/env-printer:prod-62d8182
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: env-vars-test
  namespace: timj
spec:
  selector:
    app: env-vars-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: env-vars-test
  namespace: timj
spec:
  rules:
  - host: drain-test.service.core-compute-sandbox.internal
    http:
      paths:
      - backend:
          serviceName: env-vars-test
          servicePort: 80
